...

            {loading && (
                <ActivityIndicator color={colors.primary} size={'large'} />
            )}

            <FlatList
                testID="investmentList"
                data={investments}
                keyExtractor={() => String(Math.random())}
                renderItem={renderItems}
                ListEmptyComponent={renderEmptyComponent}
            />
        </Container>
...
